# arc-music

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  utils.rs
src-tauri/src/models/: list.rs  mod.rs  music.rs
src-tauri/src/services/: add_dir.rs  get_list_json.rs  get_list_of_music_json.rs  mod.rs  music_play.rs
src/components/: Footer.vue  Menu.vue  MusicBox.vue  ShowMusicInfo.vue  TitleBar.vue
src/pages/: About.vue  FolderMgmt.vue  Home.vue  ListOfMusic.vue  MusicILike.vue  MyCollection.vue  NotFound.vue  RecentlyPlayed.vue
src/stores/: now_playing.js
